unstract-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unstract-ingress
  labels:
    app.kubernetes.io/instance: unstract
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: unstract
    app.kubernetes.io/version: "1.34"
    helm.sh/chart: unstract-0.159.0
  annotations:
    # AWS ALB Ingress Controller annotations
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:058264298758:certificate/00686684-33c1-4e3c-825c-e48e8b5e95d6
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/load-balancer-name: unstract-alb
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/health/
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "10"
    alb.ingress.kubernetes.io/success-codes: "200-399"
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600,routing.http2.enabled=true
    alb.ingress.kubernetes.io/security-groups: sg-08b413d31a417d688
    alb.ingress.kubernetes.io/subnets: subnet-05bde20a2097e9345,subnet-090a90c2cb72e080b,subnet-0797863edfb121d1d
    # Uncomment when ready:
    # alb.ingress.kubernetes.io/group.name: unstract
    alb.ingress.kubernetes.io/tags: org:appname=unstract,org:appsuite=contract,org:branch=develop,org:cmdbid=AP-367050,org:domain=ejm,org:publicfacing=false,org:repo=EJ/unstract_repo,org:teamname=cloud,dr:rpo=24h,org:compliance=na,org:dataclassification=private,org:automation:env=int
    # alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:<region>:<account-id>:regional/webacl/<name>/<id>
spec:
  ingressClassName: alb
  rules:
    - host: unstractdev.awsejmint.netjets.com
      http:
        paths:
         - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: unstract-backend
                port:
                  number: 80                
          - path: /deployment
            pathType: Prefix
            backend:
              service:
                name: unstract-backend
                port:
                  number: 80
          - path: /public
            pathType: Prefix
            backend:
              service:
                name: unstract-backend
                port:
                  number: 80            
          - path: /mr
            pathType: Prefix
            backend:
              service:
                name: unstract-backend
                port:
                  number: 80                
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unstract-frontend
                port:
                  number: 80
